--- a/Memotest/style.css
+++ b/Memotest/style.css
@@ -6,33 +6,56 @@
 }
 
 body {
-    background: linear-gradient(to bottom, #0ff, rgba(228, 114, 177, 0.945))
+    background: linear-gradient(to bottom, rgb(135, 231, 194), rgba(228, 114, 177, 0.945));
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .memotest-header {
-    display: flex;  
-    justify-content: center;
-}
+    margin-top: 25px;
+    margin-bottom: 15px;
+    text-align: center;
+    font-size: 60px;
+} 
 
 .reinicio {
-    display: flex;  
-    justify-content: center;
+    border: 2px solid black;
+    border-radius: 10%;
+    display: block;
+    margin: 5px auto;
+    padding: 10px;
+    width: auto;
+    font-size: 15px;
+    font-weight: bold;
+    background-color: rgb(248, 25, 136);
+    color: azure;
 }
 
 .juego {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: center;
     flex-wrap: wrap;
     gap: 20px;
+    width: 550px;
+    margin: 20px auto;
+    height: auto;
 }
 
 .carta {
-    width: 150px;
-    height: 150px;
+    width: 120px;
+    height: 120px;
+    border: 2px solid black;
+    border-radius: 10%;
 }
 
 .footer {
-    display: flex;  
-    justify-content: center;
+    display: block;
+    text-align: center;
+    margin: 20px auto;
+    font-size: 20px;
+    font-weight: bold;
+    color:  rgb(0, 0, 0)
 }
