--- a/Memotest/img/style.css
+++ b/Memotest/img/style.css
@@ -20,7 +20,7 @@ body {
 
 
     margin-top: 25px;
-    margin-bottom: 15px;
+    margin-bottom: 5px;
     text-align: center;
     font-size: 60px;
 } 
@@ -47,7 +47,7 @@ body {
     justify-content: center;
     flex-wrap: wrap;
     gap: 20px;
-    width: 550px;
+    max-width: 650px;
     margin: 20px auto;
     height: auto;
 }
@@ -55,10 +55,12 @@ body {
 .carta {
     width: 120px;
     height: 120px;
-    width: 120px;
-    height: 120px;
     border: 2px solid black;
     border-radius: 10%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 50px;
 }
 
 .footer {
@@ -70,4 +72,11 @@ body {
     font-size: 20px;
     font-weight: bold;
     color:  rgb(0, 0, 0)
+}
+
+#ganaste {
+    font-size: 20px;
+    color:black;
+    display: flex;
+    justify-content: center;
 }
